--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+spring.datasource.url=jdbc:mysql://localhost/palace_e-commerce?createDatabaseIfNotExist=true
+spring.datasource.username= root
+spring.datasource.password= Aaa@1234@03
+spring.jpa.hibernate.ddl-auto= update
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+
+
+spring.config.import= secret.properties
+payStack_authorization_key=Bearer sk_test_62a6d51157dbaedbba06c18aff21f210b37b78a9
+payStack_paymentInitialise_url = https://api.paystack.co/transaction/initialize
+
