--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/secret.properties
+C:\Users\mr Adio\IdeaProjects\PalaceE-commerce-App\src\main\resources\secret.properties
 
 ### STS ###
 .apt_generated
